@@ -910,9 +910,9 @@ SPVM_OP* SPVM_OP_build_for_statement(SPVM_COMPILER* compiler, SPVM_OP* op_for, S
   SPVM_OP_insert_child(compiler, op_loop_increment, op_loop_increment->last, op_term_increment);
   
   SPVM_OP_insert_child(compiler, op_block_init, op_block_init->last, op_term_init);
+  SPVM_OP_insert_child(compiler, op_block_init, op_block_init->last, op_condition);
   SPVM_OP_insert_child(compiler, op_block_init, op_block_init->last, op_block_statements);
   SPVM_OP_insert_child(compiler, op_block_init, op_block_init->last, op_loop_increment);
-  SPVM_OP_insert_child(compiler, op_block_init, op_block_init->last, op_condition);
   
   SPVM_OP_insert_child(compiler, op_loop, op_loop->last, op_block_init);
   
@@ -945,9 +945,9 @@ SPVM_OP* SPVM_OP_build_while_statement(SPVM_COMPILER* compiler, SPVM_OP* op_whil
   SPVM_OP_insert_child(compiler, op_loop_increment, op_loop_increment->last, op_term_increment);
   
   SPVM_OP_insert_child(compiler, op_block_init, op_block_init->last, op_term_init);
+  SPVM_OP_insert_child(compiler, op_block_init, op_block_init->last, op_condition);
   SPVM_OP_insert_child(compiler, op_block_init, op_block_init->last, op_block_statements);
   SPVM_OP_insert_child(compiler, op_block_init, op_block_init->last, op_loop_increment);
-  SPVM_OP_insert_child(compiler, op_block_init, op_block_init->last, op_condition);
   
   SPVM_OP_insert_child(compiler, op_loop, op_loop->last, op_block_init);
   
