@@ -14,6 +14,7 @@ my $start_memory_blocks_count = SPVM::memory_blocks_count();
 # while
 {
   ok(TestCase::While->basic());
+  ok(TestCase::While->condition_my());
 }
 
 
